优化注释和相关枚举结构。