@@ -3,6 +3,7 @@ package org.can.water_law_exam_backend.config;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.can.water_law_exam_backend.common.Result;
+import org.can.water_law_exam_backend.common.constant.ResultCodeEnum;
 import org.can.water_law_exam_backend.security.CustomAuthenticationProvider;
 import org.can.water_law_exam_backend.security.JwtAuthenticationFilter;
 import org.springframework.context.annotation.Bean;
@@ -23,9 +24,13 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 /**
  * Spring Security配置类
+ *
+ * @author 程安宁
+ * @date 2025/11/06
  */
 @Configuration
 @EnableWebSecurity
@@ -47,14 +52,14 @@ public class SecurityConfig {
     }
 
     /**
-     * CORS配置
+     * CORS 配置
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -64,7 +69,7 @@ public class SecurityConfig {
     }
 
     /**
-     * Security过滤器链配置
+     * Security 过滤器链配置
      */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -72,7 +77,7 @@ public class SecurityConfig {
                 // 禁用CSRF（使用JWT不需要CSRF保护）
                 .csrf(AbstractHttpConfigurer::disable)
 
-                // CORS配置
+                // CORS 配置
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
                 // Session管理：无状态
@@ -86,8 +91,7 @@ public class SecurityConfig {
                         .requestMatchers(
                                 "/auth/**",
                                 "/captcha/**",
-                                "/org/list", // 组织结构
-                                "/error"
+                                "/org/list" // 组织结构
                         ).permitAll()
                         // 其他所有请求都需要认证
                         .anyRequest().authenticated()
@@ -99,19 +103,19 @@ public class SecurityConfig {
                         .authenticationEntryPoint((request, response, authException) -> {
                             response.setStatus(401);
                             response.setContentType("application/json;charset=UTF-8");
-                            Result<Void> result = Result.error(401, "未登录或登录已过期，请重新登录");
+                            Result<Void> result = Result.error(ResultCodeEnum.UNAUTHORIZED.getCode(), ResultCodeEnum.UNAUTHORIZED.getMessage());
                             writeResponse(response, result);
                         })
                         // 无权限处理
                         .accessDeniedHandler((request, response, accessDeniedException) -> {
                             response.setStatus(403);
                             response.setContentType("application/json;charset=UTF-8");
-                            Result<Void> result = Result.error(403, "没有权限访问该资源");
+                            Result<Void> result = Result.error(ResultCodeEnum.FORBIDDEN.getCode(), ResultCodeEnum.FORBIDDEN.getMessage());
                             writeResponse(response, result);
                         })
                 )
 
-                // 添加JWT过滤器
+                // 添加 JWT过滤器
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
